--- a/system.html
+++ b/system.html
@@ -134,7 +134,7 @@
 
     =================================================-->
     <link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
-        
+    <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
 
 </head>
 
