--- a/test_manager.html
+++ b/test_manager.html
@@ -86,7 +86,7 @@
     <!--Modals [ SAMPLE ]-->
     <script src="js/demo/ui-modals.js"></script>
 
-
+    <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
     <!--=================================================
 
     REQUIRED
