--- a/laboratory.html
+++ b/laboratory.html
@@ -104,7 +104,7 @@
     <!--Bootbox Modals [ OPTIONAL ]-->
     <script src="plugins/bootbox/bootbox.min.js"></script>
 
-
+    <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
     <!--Modals [ SAMPLE ]-->
     <script src="js/demo/ui-modals.js"></script>
 
