--- a/notice.html
+++ b/notice.html
@@ -55,6 +55,7 @@
     <script src="js/jquery-2.2.4.min.js"></script>
 
 
+
     <!--BootstrapJS [ RECOMMENDED ]-->
     <script src="js/bootstrap.min.js"></script>
 
@@ -62,7 +63,9 @@
     <!--NiftyJS [ RECOMMENDED ]-->
     <script src="js/nifty.min.js"></script>
 
-
+    <!-----------------------------这个js文件放上面---------------------------------->
+    <script src="js/atits_pc_js/notice.js"></script>
+    <!----------------------------------------------------------------------------->
 
 
 
@@ -94,6 +97,22 @@
 
     <!--Modals [ SAMPLE ]-->
     <script src="js/demo/ui-modals.js"></script>
+
+    <!--&lt;!&ndash;X-editable [ OPTIONAL ]&ndash;&gt;-->
+
+
+
+    <!--Summernote [ OPTIONAL ]-->
+    <script src="plugins/summernote/summernote.min.js"></script>
+    <!--=================================================-->
+
+    <!--Dropzone [ OPTIONAL ]-->
+    <script src="plugins/dropzone/dropzone.min.js"></script>
+
+    <!--Bootbox Modals [ OPTIONAL ]-->
+    <script src="plugins/bootbox/bootbox.min.js"></script>
+
+    <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
 
 
 
@@ -197,8 +216,9 @@
                 <div class="panel-body">
 
                     <div id="tzgg">
-                        <button class="btn btn-danger"><i class="demo-pli-cross"></i>删除</button>
+
                         <button class="btn btn-success" data-toggle="modal" data-target="#demo-lg-modal"><i class="demo-pli-plus"></i>添加</button>
+                        <button class="btn btn-danger"><i class="demo-pli-cross"></i>删除</button>
                     </div>
 
 
@@ -213,32 +233,6 @@
                            data-page-list="[5, 10, 20]"
                            data-page-size="5"
                            data-pagination="true" data-show-pagination-switch="true">
-                        <thead>
-                        <tr>
-                            <th data-field="state" data-checkbox="true">ID</th>
-                            <th data-field="id" data-sortable="true" data-align="center" data-formatter="invoiceFormatter">标题</th>
-                            <th data-field="name" data-sortable="true" data-align="center" >发布者</th>
-                            <th data-field="date" data-sortable="true" data-align="center" data-formatter="dateFormatter">发布时间</th>
-                            <th data-field="status" data-align="center" data-sortable="true" data-formatter="statusFormatter">Status</th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        <tr>
-                            <td></td>
-                            <td><a href="notice_detail.html">安徽</a></td>
-                            <td>13</td>
-                            <td>11</td>
-                            <td>22</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>23</td>
-                            <td>13</td>
-                            <td>11</td>
-                            <td>22</td>
-                        </tr>
-                        </tbody>
                     </table>
                 </div>
             </div>
