add test_manager启动考评管理页面和添加功能 add test_manager.js

--- a/harvest.html
+++ b/harvest.html
@@ -214,10 +214,10 @@
 
 
 
-                       <div id="zdcg" class="row">
+                       <div id="zdcg">
 
                         <button data-toggle="modal" data-target="#demo-lg-modal" class="btn btn-success"><i class="demo-pli-plus"></i>添加</button>
-                           <button id="demo-delete-row" class="btn btn-danger"><i class="demo-pli-cross"></i>删除</button>
+                           <button class="btn btn-danger"><i class="demo-pli-cross"></i>删除</button>
                        </div>
 
 
@@ -546,7 +546,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="test_manage.html">
+                                    <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>考评管理</strong>
