--- a/notice.html
+++ b/notice.html
@@ -546,7 +546,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="test_manage.html">
+                                    <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>考评管理</strong>
