--- a/system.html
+++ b/system.html
@@ -776,7 +776,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="#">
+                                    <a href="test_manager.html">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>考评管理</strong>
