体系、研究室、试验站的添加、详情

--- a/laboratory.html
+++ b/laboratory.html
@@ -104,7 +104,7 @@
     <!--Bootbox Modals [ OPTIONAL ]-->
     <script src="plugins/bootbox/bootbox.min.js"></script>
 
-    <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
+
     <!--Modals [ SAMPLE ]-->
     <script src="js/demo/ui-modals.js"></script>
 
@@ -477,6 +477,7 @@
 					                    <th data-field="date" data-align="center" data-sortable="true" data-formatter="">所属体系</th>
 					                    <th data-field="status" data-align="center" data-sortable="true" data-formatter="">建设依托单位</th>
 					                    <th data-field="track" data-align="center" data-sortable="true" data-formatter="">状态</th>
+					                    <th data-field="track2" data-align="center" data-sortable="true" data-formatter="">操作</th>
 					                </tr>
 					            </thead>
 					            
@@ -484,7 +485,7 @@
 												<tr data-index="0">
 													<!--<td class="bs-checkbox "><input data-index="0" name="btSelectItem" type="checkbox"></td>-->
 													<td style="">
-															<a href="#" class="btn-link">绿色稻作技术实验室</a>
+															<a href="laboratory_detail.html" class="btn-link">绿色稻作技术实验室</a>
 													</td>
 													<td style="">吴文革</td>
 													<td style="">水稻产业技术体系</td>
@@ -493,11 +494,14 @@
 													</td>
 													<td style="text-align: center; ">
 														<div class="label label-xs label-success" style="font-size: inherit;">&nbsp;&nbsp;通过&nbsp;&nbsp;</div>
+													</td>
+													<td style="text-align: center; ">
+														<button class="btn btn-xs btn-warning" style="font-size: inherit;">&nbsp;&nbsp;修改&nbsp;&nbsp;</button>
 													</td>
 												</tr>
 												<tr data-index="0">
 													<td style="">
-															<a href="#" class="btn-link">绿色稻作技术实验室</a>
+															<a href="laboratory_detail.html" class="btn-link">绿色稻作技术实验室</a>
 													</td>
 													<td style="">吴文革</td>
 													<td style="">水稻产业技术体系</td>
@@ -506,11 +510,14 @@
 													</td>
 													<td style="text-align: center; ">
 														<div class="label label-xs label-success" style="font-size: inherit;">&nbsp;&nbsp;通过&nbsp;&nbsp;</div>
+													</td>
+													<td style="text-align: center; ">
+														<button class="btn btn-xs btn-warning" style="font-size: inherit;">&nbsp;&nbsp;修改&nbsp;&nbsp;</button>
 													</td>
 												</tr>
 												<tr data-index="0">
 													<td style="">
-															<a href="#" class="btn-link">绿色稻作技术实验室</a>
+															<a href="laboratory_detail.html" class="btn-link">绿色稻作技术实验室</a>
 													</td>
 													<td style="">吴文革</td>
 													<td style="">水稻产业技术体系</td>
@@ -519,11 +526,14 @@
 													</td>
 													<td style="text-align: center; ">
 														<div class="label label-xs label-success" style="font-size: inherit;">&nbsp;&nbsp;通过&nbsp;&nbsp;</div>
+													</td>
+													<td style="text-align: center; ">
+														<button class="btn btn-xs btn-warning" style="font-size: inherit;">&nbsp;&nbsp;修改&nbsp;&nbsp;</button>
 													</td>
 												</tr>
 												<tr data-index="0">
 													<td style="">
-															<a href="#" class="btn-link">绿色稻作技术实验室</a>
+															<a href="laboratory_detail.html" class="btn-link">绿色稻作技术实验室</a>
 													</td>
 													<td style="">吴文革</td>
 													<td style="">水稻产业技术体系</td>
@@ -532,6 +542,9 @@
 													</td>
 													<td style="text-align: center; ">
 														<div class="label label-xs label-success" style="font-size: inherit;">&nbsp;&nbsp;通过&nbsp;&nbsp;</div>
+													</td>
+													<td style="text-align: center; ">
+														<button class="btn btn-xs btn-warning" style="font-size: inherit;">&nbsp;&nbsp;修改&nbsp;&nbsp;</button>
 													</td>
 												</tr>
 												
@@ -808,7 +821,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="test_manager.html">
+                                    <a href="#">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>考评管理</strong>
