--- a/user.html
+++ b/user.html
@@ -83,7 +83,7 @@
 
     <!--Bootstrap Table [ OPTIONAL ]-->
     <script src="plugins/bootstrap-table/bootstrap-table.min.js"></script>
-    <script src="plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
+
 
     <!--Bootstrap Table Extension [ OPTIONAL ]-->
     <script src="plugins/bootstrap-table/extensions/editable/bootstrap-table-editable.js"></script>
@@ -700,7 +700,7 @@
                                 </li>
                                 <!--Menu list item-->
                                 <li>
-                                    <a href="test_manager.html">
+                                    <a href="#">
                                         <i class="demo-psi-home"></i>
                                         <span class="menu-title">
 												<strong>考评管理</strong>
